--- a/SvampeAtlas/Info.plist
+++ b/SvampeAtlas/Info.plist
@@ -39,6 +39,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>&quot;Vi skal bruge din lokation for at finde svampearterne nær dig&quot;</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
