--- a/SvampeAtlas/Info.plist
+++ b/SvampeAtlas/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>NSCameraUsageDescription</key>
-	<string>&quot;HE&quot;</string>
+	<string>&quot;HEJ HEJ &quot;</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
